--- a/campizza-backend/frontend/src/HouseholdForm.css
+++ b/campizza-backend/frontend/src/HouseholdForm.css
@@ -42,6 +42,10 @@ h5 {
   padding: 8px 8px;
 }
 
+/* input[type="text2"], textarea {
+  background-color: #D3D3D3;
+} */
+
 .check {
   width: 30px;
   height: 30px;
