--- a/campizza-backend/frontend/src/Login.css
+++ b/campizza-backend/frontend/src/Login.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap");
 
 body {
-  font-family: 'Comfortaa', serif;
+  font-family: "Comfortaa", serif;
 }
 
 h3 {
@@ -16,19 +16,19 @@ h3 {
 }
 
 .login-form {
-    background-color: #f2f2f2;
-    width: 80%;
-    max-width: 400px;
-    margin: 0 auto;
-    border-radius: 20px;
-    padding: 50px;
-    text-align: center;
-    font-size: x-large;
+  background-color: #f2f2f2;
+  width: 80%;
+  max-width: 400px;
+  margin: 0 auto;
+  border-radius: 20px;
+  padding: 50px;
+  text-align: center;
+  font-size: x-large;
 }
 
 .login {
-    min-height: 85vh;
-    padding-top: 150px;
+  min-height: 85vh;
+  padding-top: 150px;
 }
 
 .login-form-input {
@@ -41,21 +41,21 @@ h3 {
 }
 
 .login-form-title {
-    text-align: center;
+  text-align: center;
 }
 
 .login-button {
-    height: 50px;
-    width: 90%;
-    border-radius: 20px;
-    color: white;
-    background-color: #60b2fe;
-    border-color: blue;
-    border-width: medium;
-    font-size: large;
+  height: 50px;
+  width: 90%;
+  border-radius: 20px;
+  color: white;
+  background-color: #60b2fe;
+  border-color: blue;
+  border-width: medium;
+  font-size: large;
 }
-.login-button:hover{
-    border-color: #0101ab;
+.login-button:hover {
+  border-color: #0101ab;
 }
 
 .newuser-button {
@@ -63,8 +63,8 @@ h3 {
   margin-bottom: 2%;
   border-width: 2.5px;
   border-radius: 20px;
-  background-color: #FFD978;
-  border-color: #FFD978;
+  background-color: #ffd978;
+  border-color: #ffd978;
   color: black;
   font-size: 14px;
 }
@@ -76,12 +76,12 @@ h3 {
 }
 
 .password-button {
-    margin-top: 10%;
+  margin-top: 10%;
   width: 60%;
   border-radius: 20px;
   border-width: 2.5px;
   background-color: white;
-  border-color: #FFD978;
+  border-color: #ffd978;
   color: black;
   font-size: 14px;
 }
@@ -93,5 +93,5 @@ h3 {
 }
 
 img {
-    margin: 0 auto;
+  margin: 0 auto;
 }
